[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/naive_behavior_tree/editor/script_editor/BTSEdit.gd" type="Script" id=1]
[ext_resource path="res://addons/naive_behavior_tree/editor/script_editor/BTSEditor.gd" type="Script" id=2]
[ext_resource path="res://addons/naive_behavior_tree/editor/script_editor/CompletionPopup.gd" type="Script" id=3]

[sub_resource type="StyleBoxLine" id=1]
content_margin_left = 11.0
color = Color( 0.631373, 0.627451, 0.639216, 1 )
vertical = true

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0980392, 0.113725, 0.152941, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0

[node name="BTSEditor" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 20.0

[node name="FileMenu" type="MenuButton" parent="HBoxContainer"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
items = [ "Save", null, 0, false, false, 0, 0, null, "", false ]

[node name="EditMenu" type="MenuButton" parent="HBoxContainer"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 20.0
focus_mode = 2
text = "Edit"
items = [ "Undo", null, 0, false, false, 0, 0, null, "", false, "Redo", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, false, 2, 0, null, "", true, "Copy", null, 0, false, false, 3, 0, null, "", false, "Cut", null, 0, false, false, 4, 0, null, "", false, "Paste", null, 0, false, false, 5, 0, null, "", false, "", null, 0, false, false, 6, 0, null, "", true, "Select All", null, 0, false, false, 7, 0, null, "", false, "Clear", null, 0, false, false, 8, 0, null, "", false, "", null, 0, false, false, 9, 0, null, "", true, "Move Up", null, 0, false, false, 10, 0, null, "", false, "Move Down", null, 0, false, false, 11, 0, null, "", false, "Duplicate", null, 0, false, false, 12, 0, null, "", false ]

[node name="TitleLabel" type="Label" parent="HBoxContainer"]
margin_left = 79.0
margin_top = 3.0
margin_right = 346.5
margin_bottom = 17.0
custom_styles/normal = SubResource( 1 )
text = "Behavior Tree Script Editor - res://re.gd*"

[node name="BTSEdit" type="TextEdit" parent="."]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "#
# 测试输出
#

import print:\"res://addons/naive_behavior_tree/behavior_tree/lib/test/Print.gd\"

subtree name: print_123
	parallel orchestrator: JOIN
		print msg: '1'
		print msg: '2'
		print msg: '3'

tree
	sequence
		$print_123
		timer wait: 1
		print msg:'a'
		timer wait: 1
		random_selector
			print msg: 'b'
			print msg: 'c'
		timer wait: 1
	

"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
highlight_all_occurrences = true
smooth_scrolling = true
minimap_draw = true
caret_blink = true
script = ExtResource( 1 )

[node name="CompletionPopup" type="ScrollContainer" parent="BTSEdit"]
visible = false
margin_right = 474.0
margin_bottom = 125.0
focus_mode = 2
custom_styles/bg = SubResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BTSEdit/CompletionPopup"]
margin_left = 1.0
margin_top = 1.0
margin_right = 473.0
margin_bottom = 95.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="RichTextLabel" type="RichTextLabel" parent="BTSEdit/CompletionPopup/VBoxContainer"]
margin_right = 472.0
margin_bottom = 19.0
custom_styles/normal = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "sadasdasd"
text = "sadasdasd"
fit_content_height = true

[node name="RichTextLabel2" type="RichTextLabel" parent="BTSEdit/CompletionPopup/VBoxContainer"]
margin_top = 19.0
margin_right = 472.0
margin_bottom = 34.0
bbcode_enabled = true
bbcode_text = "sadasdasd"
text = "sadasdasd"
fit_content_height = true

[node name="RichTextLabel3" type="RichTextLabel" parent="BTSEdit/CompletionPopup/VBoxContainer"]
margin_top = 34.0
margin_right = 472.0
margin_bottom = 49.0
bbcode_enabled = true
bbcode_text = "sadasdasd"
text = "sadasdasd"
fit_content_height = true

[node name="RichTextLabel4" type="RichTextLabel" parent="BTSEdit/CompletionPopup/VBoxContainer"]
margin_top = 49.0
margin_right = 472.0
margin_bottom = 64.0
bbcode_enabled = true
bbcode_text = "sadasdasd"
text = "sadasdasd"
fit_content_height = true

[node name="RichTextLabel5" type="RichTextLabel" parent="BTSEdit/CompletionPopup/VBoxContainer"]
margin_top = 64.0
margin_right = 472.0
margin_bottom = 79.0
bbcode_enabled = true
bbcode_text = "sadasdasd"
text = "sadasdasd"
fit_content_height = true

[node name="RichTextLabel6" type="RichTextLabel" parent="BTSEdit/CompletionPopup/VBoxContainer"]
margin_top = 79.0
margin_right = 472.0
margin_bottom = 94.0
bbcode_enabled = true
bbcode_text = "sadasdasd"
text = "sadasdasd"
fit_content_height = true

[node name="AutoCompletionTimer" type="Timer" parent="BTSEdit"]
wait_time = 0.3
one_shot = true

[connection signal="text_changed" from="BTSEdit" to="." method="_on_BTSEdit_text_changed"]
[connection signal="completion_selected" from="BTSEdit/CompletionPopup" to="BTSEdit" method="_on_CompletionPopup_completion_selected"]
[connection signal="visibility_changed" from="BTSEdit/CompletionPopup" to="BTSEdit/CompletionPopup" method="_on_CompletionPopup_visibility_changed"]
[connection signal="timeout" from="BTSEdit/AutoCompletionTimer" to="BTSEdit" method="_on_AutoCompletionTimer_timeout"]
